--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": "^7.0",
+        "php": "^5.6 || ^7.0",
         "graphaware/neo4j-bolt": "^1.6",
         "graphaware/neo4j-php-client": "^4.6.4",
         "symfony/dependency-injection": " ^2.8.3 || ^3.0.3 || ^4.0",
